# CI-CD-Study

./: CMakeLists.txt  README.md  main.cpp  sum.cpp  sum_test.cpp
